--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -42,7 +42,7 @@
   </servlet-mapping>
 
   <error-page>
-    <exception-type>java.util.NoSuchElementException</exception-type>
+    <exception-type>com.es.phoneshop.model.exceptions.ProductNotFoundException</exception-type>
     <location>/WEB-INF/pages/productNotFound.jsp</location>
   </error-page>
 
