--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,79 +3,109 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
-  <display-name>Phoneshop servlet api training</display-name>
+    <display-name>Phoneshop servlet api training</display-name>
 
-  <context-param>
-    <param-name>insertDemoData</param-name>
-    <param-value>true</param-value>
-  </context-param>
+    <context-param>
+        <param-name>insertDemoData</param-name>
+        <param-value>true</param-value>
+    </context-param>
 
-  <listener>
-    <listener-class>com.es.phoneshop.web.listener.DemoDataListener</listener-class>
-  </listener>
+    <listener>
+        <listener-class>com.es.phoneshop.web.listener.DemoDataListener</listener-class>
+    </listener>
 
-  <servlet>
-    <servlet-name>productList</servlet-name>
-    <servlet-class>com.es.phoneshop.web.servlet.ProductListPageServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>productList</servlet-name>
-    <url-pattern>/products</url-pattern>
-  </servlet-mapping>
+    <servlet>
+        <servlet-name>productList</servlet-name>
+        <servlet-class>com.es.phoneshop.web.servlet.ProductListPageServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>productList</servlet-name>
+        <url-pattern>/products</url-pattern>
+    </servlet-mapping>
 
-  <servlet>
-    <servlet-name>product</servlet-name>
-    <servlet-class>com.es.phoneshop.web.servlet.ProductDetailsPageServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>product</servlet-name>
-    <url-pattern>/products/*</url-pattern>
-  </servlet-mapping>
+    <servlet>
+        <servlet-name>product</servlet-name>
+        <servlet-class>com.es.phoneshop.web.servlet.ProductDetailsPageServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>product</servlet-name>
+        <url-pattern>/products/*</url-pattern>
+    </servlet-mapping>
 
-  <servlet>
-    <servlet-name>priceHistoryPageServlet</servlet-name>
-    <servlet-class>com.es.phoneshop.web.servlet.ProductPriceHistoryPageServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>priceHistoryPageServlet</servlet-name>
-    <url-pattern>/productPriceHistory/*</url-pattern>
-  </servlet-mapping>
+    <servlet>
+        <servlet-name>priceHistoryPageServlet</servlet-name>
+        <servlet-class>com.es.phoneshop.web.servlet.ProductPriceHistoryPageServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>priceHistoryPageServlet</servlet-name>
+        <url-pattern>/productPriceHistory/*</url-pattern>
+    </servlet-mapping>
 
 
-  <servlet>
-    <servlet-name>deleteCartItem</servlet-name>
-    <servlet-class>com.es.phoneshop.web.servlet.DeleteCartItemServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>deleteCartItem</servlet-name>
-    <url-pattern>/cart/deleteCartItem/*</url-pattern>
-  </servlet-mapping>
+    <servlet>
+        <servlet-name>deleteCartItem</servlet-name>
+        <servlet-class>com.es.phoneshop.web.servlet.DeleteCartItemServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>deleteCartItem</servlet-name>
+        <url-pattern>/cart/deleteCartItem/*</url-pattern>
+    </servlet-mapping>
 
-  <servlet>
-    <servlet-name>miniCart</servlet-name>
-    <servlet-class>com.es.phoneshop.web.servlet.MiniCartServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>miniCart</servlet-name>
-    <url-pattern>/cart/minicart</url-pattern>
-  </servlet-mapping>
+    <servlet>
+        <servlet-name>miniCart</servlet-name>
+        <servlet-class>com.es.phoneshop.web.servlet.MiniCartServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>miniCart</servlet-name>
+        <url-pattern>/cart/minicart</url-pattern>
+    </servlet-mapping>
 
-  <servlet>
-    <servlet-name>cartPageServlet</servlet-name>
-    <servlet-class>com.es.phoneshop.web.servlet.CartPageServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>cartPageServlet</servlet-name>
-    <url-pattern>/cart</url-pattern>
-  </servlet-mapping>
+    <servlet>
+        <servlet-name>cartPageServlet</servlet-name>
+        <servlet-class>com.es.phoneshop.web.servlet.CartPageServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>cartPageServlet</servlet-name>
+        <url-pattern>/cart</url-pattern>
+    </servlet-mapping>
 
-  <error-page>
-    <exception-type>com.es.phoneshop.model.exceptions.ProductNotFoundException</exception-type>
-    <location>/WEB-INF/pages/productNotFound.jsp</location>
-  </error-page>
+    <servlet>
+        <servlet-name>checkoutPageServlet</servlet-name>
+        <servlet-class>com.es.phoneshop.web.servlet.CheckoutPageServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>checkoutPageServlet</servlet-name>
+        <url-pattern>/checkout</url-pattern>
+    </servlet-mapping>
 
-  <error-page>
-    <error-code>500</error-code>
-    <location>/WEB-INF/pages/error.jsp</location>
-  </error-page>
+
+    <servlet>
+        <servlet-name>overview</servlet-name>
+        <servlet-class>com.es.phoneshop.web.servlet.OrderOverviewPageServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>overview</servlet-name>
+        <url-pattern>/overview/*</url-pattern>
+    </servlet-mapping>
+
+
+    <filter>
+        <filter-name>dosFilter</filter-name>
+        <filter-class>com.es.phoneshop.web.filter.DosFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>dosFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+
+    <error-page>
+        <exception-type>com.es.phoneshop.exceptions.ProductNotFoundException</exception-type>
+        <location>/WEB-INF/pages/productNotFound.jsp</location>
+    </error-page>
+
+    <error-page>
+        <error-code>500</error-code>
+        <location>/WEB-INF/pages/error.jsp</location>
+    </error-page>
 </web-app>
