--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -88,6 +88,15 @@
         <url-pattern>/overview/*</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>advancedSearch</servlet-name>
+        <servlet-class>com.es.phoneshop.web.servlet.AdvancedSearchPageServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>advancedSearch</servlet-name>
+        <url-pattern>/advancedSearch</url-pattern>
+    </servlet-mapping>
+
 
     <filter>
         <filter-name>dosFilter</filter-name>
